implement basic server & integrate with client

--- a/flagd-config-server/swagger-schemas/src/main/resources/index.yaml
+++ b/flagd-config-server/swagger-schemas/src/main/resources/index.yaml
@@ -193,7 +193,7 @@ components:
     FeatureFlag:
       type: "object"
       required:
-        - "id"
+        - "key"
         - "name"
         - "area"
         - "description"
