--- a/flagd-hub-ui/package.json
+++ b/flagd-hub-ui/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "http-proxy-middleware": "^3.0.3",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
