change ui fetch flags to polling

--- a/flagd-hub-server/settings.gradle
+++ b/flagd-hub-server/settings.gradle
@@ -9,8 +9,8 @@ pluginManagement {
     }
 }
 
-rootProject.name = 'flagd-config-server'
+rootProject.name = 'flagd-hub-server'
 
-include 'flagd-config-api'
+include 'flagd-hub-api'
 include 'swagger-schemas'
 
