--- a/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
@@ -3,6 +3,11 @@ spring:
     name: flagd-hub-api
 #  main:
 #    allow-bean-definition-overriding: true # Allow overriding bean definitions (optional)
+  redis:
+    host: redis-secure
+    port: 6379
+    user-name: barakg
+    password: banana
 
 server:
   port: 8080 # Port the application will run on
