--- a/flagd-hub-ui/package.json
+++ b/flagd-hub-ui/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.0",
     "stream": "^0.0.3",
     "url": "^0.11.4",
     "uuid": "^11.0.5",
