--- a/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
@@ -1,11 +1,16 @@
 spring:
   application:
     name: flagd-hub-api
-#  main:
 #    allow-bean-definition-overriding: true # Allow overriding bean definitions (optional)
 
+debug: true
+
+security:
+  basic:
+    enabled=${IS_SECURED}:
+
 server:
-  port: 8080 # Port the application will run on
+  port: 8090 # Port the application will run on
 
 management:
   endpoints:
