--- a/flagd-hub-server/swagger-schemas/src/main/resources/index.yaml
+++ b/flagd-hub-server/swagger-schemas/src/main/resources/index.yaml
@@ -25,6 +25,45 @@ paths:
             application/json:
               schema:
                 type: "object"
+  /flagd-hub/login:
+    post:
+      summary: "Authenticate user"
+      description: "Authenticate a user with a username and password."
+      operationId: login
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - username
+                - password
+              properties:
+                username:
+                  type: string
+                  description: "The username for authentication"
+                password:
+                  type: string
+                  format: password
+                  description: "The password for authentication"
+      responses:
+        200:
+          description: "Authentication successful."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    description: "JWT token for authenticated requests."
+        401:
+          description: "Invalid username or password."
+        400:
+          description: "Bad request. Missing or invalid parameters."
   /flagd-hub/flags:
     get:
       summary: "Get all feature flags"
