--- a/flagd-hub-server/flagd-hub-api/build.gradle
+++ b/flagd-hub-server/flagd-hub-api/build.gradle
@@ -33,7 +33,7 @@ dependencies {
             exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
         }
     }
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation platform('org.junit:junit-bom:5.10.0')
@@ -45,7 +45,7 @@ test {
 }
 
 bootBuildImage {
-    imageName = 'flagd-hub:0.3.0' // Replace with your desired image name
+    imageName = 'flagd-hub:latest' // Replace with your desired image name
     environment = [
             'BP_JVM_VERSION': '21', // Specify the JVM version (optional)
     ]
