--- a/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: flagd-hub-api
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+    password: ${REDIS_PASSWORD}
 #    allow-bean-definition-overriding: true # Allow overriding bean definitions (optional)
 
 debug: true
