--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   flagd-hub:
-    image: flagd-hub:0.6.0
+    image: flagd-hub:0.11.0
     container_name: flagd-hub
     ports:
       - "8090:8090"
@@ -16,6 +16,8 @@ services:
       - REDIS_PASSWORD=securepassword123
     depends_on:
       - redis
+    volumes:
+      - /home/feature-flags.json:/home/feature-flags.json
 
   flagd-hub-ui:
     image: flagd-hub-ui:0.3.0
