--- a/flagd-hub-server/flagd-hub-api/build.gradle
+++ b/flagd-hub-server/flagd-hub-api/build.gradle
@@ -45,7 +45,7 @@ test {
 }
 
 bootBuildImage {
-    imageName = 'flagd-hub:latest' // Replace with your desired image name
+    imageName = 'flagd-hub:0.17.0' // Replace with your desired image name
     environment = [
             'BP_JVM_VERSION': '21', // Specify the JVM version (optional)
     ]
