--- a/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
@@ -12,6 +12,9 @@ debug: true
 security:
   basic:
     enabled=${IS_SECURED}:
+cors:
+  allowed:
+    origins: http://localhost:3000
 
 server:
   port: 8090 # Port the application will run on
