--- a/flagd-hub-ui/package.json
+++ b/flagd-hub-ui/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "http-proxy-middleware": "^3.0.3",
+    "js-yaml": "^4.1.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3"
   }
