--- a/flagd-hub-server/flagd-hub-api/build.gradle
+++ b/flagd-hub-server/flagd-hub-api/build.gradle
@@ -1,39 +1,41 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.1'
-    id 'io.spring.dependency-management'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 dependencies {
+    // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    
+    // Dotenv for environment variables
+    implementation 'io.github.cdimascio:dotenv-java:2.3.2'
+    
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
+    
 
+    // Custom project dependency
     implementation project(':swagger-schemas')
-
+    
+    // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-    // Log4j2 dependencies
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
-    implementation 'org.apache.logging.log4j:log4j-api:2.24.3'
-    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.24.3'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    
+    // JWT dependencies
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
+    
+    // Jackson dependencies
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
-
-    // Exclude Spring Boot's default logging (Logback)
-    configurations {
-        all {
-            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-        }
-    }
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+        
+    // Testing dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation platform('org.junit:junit-bom:5.10.0')
@@ -47,6 +49,6 @@ test {
 bootBuildImage {
     imageName = 'flagd-hub:0.10.0' // Replace with your desired image name
     environment = [
-            'BP_JVM_VERSION': '21', // Specify the JVM version (optional)
+        'BP_JVM_VERSION': '21', // Specify the JVM version (optional)
     ]
 }
