--- a/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
@@ -2,16 +2,17 @@ spring:
   application:
     name: flagd-hub-api
   redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD}
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
+    password: ${REDIS_PASSWORD:}
 #    allow-bean-definition-overriding: true # Allow overriding bean definitions (optional)
 
 debug: true
 
 security:
   basic:
-    enabled=${IS_SECURED}:
+    enabled: ${IS_SECURED:false}
+
 cors:
   allowed:
     origins: http://localhost:3000
@@ -30,10 +31,10 @@ management:
       enabled: true # Enable default health checks
 
 logging:
-  config: classpath:log4j2.yaml
   level:
-    root: INFO # Default log level
-    org.springframework: ERROR # Example of enabling debug logs for Spring
+    root: INFO
+    org.springframework: INFO
+    org.flagd.hub: DEBUG
 
 actuator:
   metrics:
