--- a/flagd-hub-server/flagd-hub-api/src/main/resources/log4j2.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/log4j2.yaml
@@ -1,24 +1,23 @@
 Configuration:
   status: warn
+  
   appenders:
-    # Console Appender
     Console:
       name: Console
       target: SYSTEM_OUT
       PatternLayout:
-        pattern: "%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %msg%n"
+        Pattern: "%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n"
 
-  loggers:
-    # Root Logger
+  Loggers:
     Root:
       level: info
       AppenderRef:
         - ref: Console
-
-    # Specific Logger
-#    Logger:
-#      - name: org.flagd.hub.config.server
-#        level: info
-#        additivity: false
-#        AppenderRef:
-#          - ref: Console
+    
+    # Uncomment to enable specific logger
+    # Logger:
+    #   - name: org.flagd.hub.config.server
+    #     level: info
+    #     additivity: false
+    #     AppenderRef:
+    #       - ref: Console
