feat: Add OpenAPI-generated Flagd Hub client and new internal API controller.

--- a/flagd-hub-server/settings.gradle
+++ b/flagd-hub-server/settings.gradle
@@ -14,4 +14,5 @@ rootProject.name = 'flagd-hub-server'
 include 'flagd-hub-api'
 include 'swagger-schemas'
 include 'example-service'
+include 'flagd-hub-client'
 
