--- a/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
+++ b/flagd-hub-server/flagd-hub-api/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ cors:
 
 server:
   port: 8090 # Port the application will run on
+  insecure:
+    port: 8091 # Insecure port for internal endpoints
 
 management:
   endpoints:
