--- a/flagd-hub-server/swagger-schemas/build.gradle
+++ b/flagd-hub-server/swagger-schemas/build.gradle
@@ -9,15 +9,15 @@ group = 'org.flagd.hub.rest'
 version = '0.1.0'
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter' // Spring Boot starter
-    implementation 'org.springframework.boot:spring-boot-starter-web' // Spring Web starter
-    implementation 'io.swagger.core.v3:swagger-annotations:2.2.16'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
-    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
-    implementation 'javax.validation:validation-api:2.0.1.Final'
-    implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+    api 'org.springframework.boot:spring-boot-starter' // Spring Boot starter
+    api 'org.springframework.boot:spring-boot-starter-web' // Spring Web starter
+    api 'io.swagger.core.v3:swagger-annotations:2.2.16'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    api 'com.fasterxml.jackson.module:jackson-module-parameter-names'
+    api 'javax.validation:validation-api:2.0.1.Final'
+    api 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
+    api 'javax.annotation:javax.annotation-api:1.3.2'
+    api 'org.openapitools:jackson-databind-nullable:0.2.6'
     implementation 'org.projectlombok:lombok' // Lombok for reducing boilerplate
     annotationProcessor 'org.projectlombok:lombok' // Lombok annotation processor
 }
