--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,10 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=securepassword123
+      - CORS_ALLOWED_ORIGINS=http://localhost:3000
+      - TOKEN_EXPIRATION_IN_HOURS=24
     depends_on:
       - redis
-    volumes:
-      - /home/feature-flags.json:/home/feature-flags.json
 
   flagd-hub-ui:
     image: flagd-hub-ui:latest
