--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Wait for services to be healthy
         run: |
           echo "Checking API availability..."
+          sleep 30
           curl --retry 30 --retry-delay 5 --retry-connrefused http://localhost:8090/actuator/health || exit 1
 
           echo "All services are healthy!"
